fixed extended layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ section .heading-texts span {
 }
 
 nav {
-    padding: 0 6.5%;
+    padding: 0;
     color: #000;
     background-color: #fff;
 }
@@ -114,7 +114,7 @@ a.active, a.nav-link:hover {
     color: var(--primaryColor);
 }
 nav .menu-links {
-    flex: 1;
+    text-align: center;
 }
 nav .nav-item {
     display: inline-block;
